@@ -23,7 +23,6 @@ import org.elasticsearch.ElasticsearchParseException;
 import org.elasticsearch.ResourceNotFoundException;
 import org.elasticsearch.common.Nullable;
 import org.elasticsearch.common.UUIDs;
-import org.elasticsearch.common.xcontent.ToXContent;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentParser;
 import org.elasticsearch.snapshots.SnapshotId;
@@ -56,7 +55,7 @@ public final class RepositoryData {
      * An instance initialized for an empty repository.
      */
     public static final RepositoryData EMPTY = new RepositoryData(EMPTY_REPO_GEN,
-        Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap(), Collections.emptyList());
+        Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap());
 
     /**
      * The generational id of the index file from which the repository data was read.
@@ -78,27 +77,20 @@ public final class RepositoryData {
      * The snapshots that each index belongs to.
      */
     private final Map<IndexId, Set<SnapshotId>> indexSnapshots;
-    /**
-     * The snapshots that are no longer compatible with the current cluster ES version.
-     */
-    private final List<SnapshotId> incompatibleSnapshotIds;
 
-    public RepositoryData(long genId,
-                          Map<String, SnapshotId> snapshotIds,
-                          Map<String, SnapshotState> snapshotStates,
-                          Map<IndexId, Set<SnapshotId>> indexSnapshots,
-                          List<SnapshotId> incompatibleSnapshotIds) {
+
+    public RepositoryData(long genId, Map<String, SnapshotId> snapshotIds, Map<String, SnapshotState> snapshotStates,
+                          Map<IndexId, Set<SnapshotId>> indexSnapshots) {
         this.genId = genId;
         this.snapshotIds = Collections.unmodifiableMap(snapshotIds);
         this.snapshotStates = Collections.unmodifiableMap(snapshotStates);
         this.indices = Collections.unmodifiableMap(indexSnapshots.keySet().stream()
             .collect(Collectors.toMap(IndexId::getName, Function.identity())));
         this.indexSnapshots = Collections.unmodifiableMap(indexSnapshots);
-        this.incompatibleSnapshotIds = Collections.unmodifiableList(incompatibleSnapshotIds);
     }
 
     protected RepositoryData copy() {
-        return new RepositoryData(genId, snapshotIds, snapshotStates, indexSnapshots, incompatibleSnapshotIds);
+        return new RepositoryData(genId, snapshotIds, snapshotStates, indexSnapshots);
     }
 
     /**
@@ -116,22 +108,10 @@ public final class RepositoryData {
     }
 
     /**
-     * Returns an immutable collection of the snapshot ids in the repository that are incompatible with the
-     * current ES version.
-     */
-    public Collection<SnapshotId> getIncompatibleSnapshotIds() {
-        return incompatibleSnapshotIds;
-    }
-
-    /**
-     * Returns an immutable collection of all the snapshot ids in the repository, both active and
-     * incompatible snapshots.
+     * Returns an immutable collection of all the snapshot ids in the repository.
      */
     public Collection<SnapshotId> getAllSnapshotIds() {
-        List<SnapshotId> allSnapshotIds = new ArrayList<>(snapshotIds.size() + incompatibleSnapshotIds.size());
-        allSnapshotIds.addAll(snapshotIds.values());
-        allSnapshotIds.addAll(incompatibleSnapshotIds);
-        return Collections.unmodifiableList(allSnapshotIds);
+        return List.copyOf(snapshotIds.values());
     }
 
     /**
@@ -171,7 +151,7 @@ public final class RepositoryData {
         for (final IndexId indexId : snapshottedIndices) {
             allIndexSnapshots.computeIfAbsent(indexId, k -> new LinkedHashSet<>()).add(snapshotId);
         }
-        return new RepositoryData(genId, snapshots, newSnapshotStates, allIndexSnapshots, incompatibleSnapshotIds);
+        return new RepositoryData(genId, snapshots, newSnapshotStates, allIndexSnapshots);
     }
 
     /**
@@ -218,7 +198,7 @@ public final class RepositoryData {
             indexSnapshots.put(indexId, set);
         }
 
-        return new RepositoryData(genId, newSnapshotIds, newSnapshotStates, indexSnapshots, incompatibleSnapshotIds);
+        return new RepositoryData(genId, newSnapshotIds, newSnapshotStates, indexSnapshots);
     }
 
     /**
@@ -244,13 +224,12 @@ public final class RepositoryData {
         return snapshotIds.equals(that.snapshotIds)
                    && snapshotStates.equals(that.snapshotStates)
                    && indices.equals(that.indices)
-                   && indexSnapshots.equals(that.indexSnapshots)
-                   && incompatibleSnapshotIds.equals(that.incompatibleSnapshotIds);
+                   && indexSnapshots.equals(that.indexSnapshots);
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(snapshotIds, snapshotStates, indices, indexSnapshots, incompatibleSnapshotIds);
+        return Objects.hash(snapshotIds, snapshotStates, indices, indexSnapshots);
     }
 
     /**
@@ -299,7 +278,6 @@ public final class RepositoryData {
     }
 
     private static final String SNAPSHOTS = "snapshots";
-    private static final String INCOMPATIBLE_SNAPSHOTS = "incompatible-snapshots";
     private static final String INDICES = "indices";
     private static final String INDEX_ID = "id";
     private static final String NAME = "name";
@@ -307,8 +285,7 @@ public final class RepositoryData {
     private static final String STATE = "state";
 
     /**
-     * Writes the snapshots metadata and the related indices metadata to x-content, omitting the
-     * incompatible snapshots.
+     * Writes the snapshots metadata and the related indices metadata to x-content.
      */
     public XContentBuilder snapshotsToXContent(final XContentBuilder builder) throws IOException {
         builder.startObject();
@@ -449,49 +426,7 @@ public final class RepositoryData {
         } else {
             throw new ElasticsearchParseException("start object expected");
         }
-        return new RepositoryData(genId, snapshots, snapshotStates, indexSnapshots, Collections.emptyList());
-    }
-
-    /**
-     * Writes the incompatible snapshot ids to x-content.
-     */
-    public XContentBuilder incompatibleSnapshotsToXContent(XContentBuilder builder) throws IOException {
-        builder.startObject();
-        // write the incompatible snapshots list
-        builder.startArray(INCOMPATIBLE_SNAPSHOTS);
-        for (final SnapshotId snapshot : getIncompatibleSnapshotIds()) {
-            snapshot.toXContent(builder, ToXContent.EMPTY_PARAMS);
-        }
-        builder.endArray();
-        builder.endObject();
-        return builder;
-    }
-
-    /**
-     * Reads the incompatible snapshot ids from x-content, loading them into a new instance of {@link RepositoryData}
-     * that is created from the invoking instance, plus the incompatible snapshots that are read from x-content.
-     */
-    public RepositoryData incompatibleSnapshotsFromXContent(final XContentParser parser) throws IOException {
-        List<SnapshotId> incompatibleSnapshotIds = new ArrayList<>();
-        if (parser.nextToken() == XContentParser.Token.START_OBJECT) {
-            while (parser.nextToken() == XContentParser.Token.FIELD_NAME) {
-                String currentFieldName = parser.currentName();
-                if (INCOMPATIBLE_SNAPSHOTS.equals(currentFieldName)) {
-                    if (parser.nextToken() == XContentParser.Token.START_ARRAY) {
-                        while (parser.nextToken() != XContentParser.Token.END_ARRAY) {
-                            incompatibleSnapshotIds.add(SnapshotId.fromXContent(parser));
-                        }
-                    } else {
-                        throw new ElasticsearchParseException("expected array for [" + currentFieldName + "]");
-                    }
-                } else {
-                    throw new ElasticsearchParseException("unknown field name  [" + currentFieldName + "]");
-                }
-            }
-        } else {
-            throw new ElasticsearchParseException("start object expected");
-        }
-        return new RepositoryData(this.genId, this.snapshotIds, this.snapshotStates, this.indexSnapshots, incompatibleSnapshotIds);
+        return new RepositoryData(genId, snapshots, snapshotStates, indexSnapshots);
     }
 
 }
